Use smaller font-size in code samples to avoid wrap-around, traverse all comment tokens
BUG=https://github.com/dart-lang/pub-dartlang-dart/issues/37
R=whesse@google.com

Review URL: https://codereview.chromium.org/1410073003 .

--- a/static/style.css
+++ b/static/style.css
@@ -56,6 +56,10 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block;
 }
 
+.highlight {
+  font-size: 85%;
+}
+
 .highlight .c {
   color: #999988;
   font-style: italic;
